Testing some CSS details before customize for frontend

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <style>
 
     </style>
-    <title>React App</title>
+    <title>My simple react graph plotter</title>
   </head>
   <body>
     <noscript>
